# Chatter

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  check_repo_guardrails.py  install.ps1  install.sh  pyproject.toml  ruff.toml
.github/workflows/: guardrails.yml
chatter/: __init__.py  agent.py  audit.py  bot.py  claude_auth.py  cli.py  codex_app_server.py  codex_auth.py  config.py  notify.py
tests/: conftest.py  test_approval_memory.py  test_audit.py  test_auth.py  test_bash_sandbox.py  test_config.py  test_path_validation.py
