[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatter"
dynamic = ["version"]
description = "Telegram bot that bridges messages to a local Claude CLI agent"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=20.0",
    "click>=8.1",
    "pyyaml>=5.1",
    "claude-agent-sdk>=0.1.44",
    "colorama>=0.4.6",
]

[project.scripts]
chatter = "chatter.cli:main"

[tool.setuptools.dynamic]
version = {attr = "chatter.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["chatter*"]
